in-memory simple secret sharingn
